Bug 1608802 - fix permissions alignment in the preferences now that descriptions are not affected by baseline alignment, r=emilio
There are two issues:
- the 'thin' separators added in bug 1381401 . They have width of 0.5em and now they break things onto their own line. We can just remove these.
- whitespace now produces space, making up for some but not all of the 0.5em separation we had before. Let's add some inline-end margin back to address this.

Differential Revision: https://phabricator.services.mozilla.com/D59682

UltraBlame original commit: e56e844e8281c1dc6d5592df1658d97a4c003b62

--- a/browser/themes/shared/incontentprefs/privacy.css
+++ b/browser/themes/shared/incontentprefs/privacy.css
@@ -31,6 +31,22 @@ middle
 ;
 }
 .
+permission
+-
+icon
+{
+margin
+-
+inline
+-
+end
+:
+0
+.
+2em
+;
+}
+.
 content
 -
 blocking
